--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../src/TaskModal"],
   "exclude": ["node_modules", "dist"]
 }
