--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,14 @@
 [build]
 builder = "nixpacks"
+buildCommand = "cd backend && npm install && npm run build"
 
 [deploy]
-startCommand = "npm start"
+startCommand = "cd backend && npm start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [[services]]
 name = "esoft-todo-list-backend"
 type = "web"
-httpPort = 8080 # Railway сам подставит правильный порт через переменную окружения PORT
-runCommand = "npm start"
+httpPort = 8080
+runCommand = "cd backend && npm start"
